Added Java17+ options to SBT.